@@ -5,5 +5,5 @@
 <h1>{$config{project}} {$config{bug}} report logs - #{$bug_num}</h1>
 <p>There is no record of {$config{bug}} #{$bug_num}.
 Try the <a href="http://{$config{web_domain}}/">search page</a> instead.</p>
-{include('html/tail')}
+{#include('html/html_tail')}
 </body></html>
