@@ -222,6 +222,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
   * Add correspondent option to track bug correpondents (closes: #485804)
   * Allow clicking anywhere outside the extra status box to close the
     extra status box (closes: #499990) Thanks to James Vega for the patch.
+  * Return 404 when a bug number that does not exist is used
+    (closes: #499997)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
